# sheffield-crime-outcomes

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ingest.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
airflow/: Dockerfile  entrypoint.sh
airflow/dags/: sheffield_crime_pipeline.py
app/: date_utils.py  ingest.py  load_to_databricks.py  test_dates.py
dbt_police_data/: .user.yml  dbt_project.yml  profiles.yml
dbt_police_data/models/mart/: mart_crime_map.sql  mart_crime_map.yml  mart_crime_outcome_timings.sql  mart_crime_outcome_timings.yml  mart_stop_search_outcome_mix.sql  mart_stop_search_outcome_mix.yml  mart_stop_search_reason_trends.sql  mart_stop_search_reason_trends.yml
dbt_police_data/models/staging/: sources.yml  stg_police_crimes.sql  stg_police_crimes.yml  stg_police_outcomes.sql  stg_police_outcomes.yml  stg_police_stop_and_search.sql  stg_police_stop_and_search.yml
streamlit/: main.py  main_old.py
terraform/: .terraform.lock.hcl  deploy.sh  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
