[project]
name = "sheffield-crime-outcomes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.73",
    "databricks>=0.2",
    "databricks-sql-connector>=4.2.5",
    "dbt-core>=1.10,<1.11",
    "dbt-databricks>=1.10,<1.11",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "pandas>=2.2,<2.4",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "pydeck>=0.9.1",
    "requests>=2.32.5",
    "streamlit>=1.56.0",
]

